particle background done

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
    <div id="startPage">
       <div>
          <h2>Welcome To My Portfolio</h2>
-         <a href="#">Start</a>
+         <div id="startBtn">
+            <a href="#">Start</a>
+         </div>
       </div>
    </div>
 </body>
