--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       </nav>
    </header>
 
-   <div id="startPage">
-      <div>
+   <div id="boxshadow">
+      <div id="startPage">
          <h2>Welcome To My Portfolio</h2>
          <div id="startBtn">
             <a href="#">Start</a>
