Frist section of the second page partially done

--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
          </div>
       </div>
    </div>
+
+   <div id="about">
+      <div id="about-content">
+         <h1><span>Hi</span>, <br>
+            I'm Min,<br> The <span id="typeEffect"></span></h1>
+      </div>
+      <div id="about-image">
+         <img src="./pic1.png" alt="bulb">
+         <p>“I'm not a great programmer; I'm just a good programmer with great habits.”
+            ― Kent Beck</p>
+      </div>
+   </div>
 </body>
 <script src="./main.js"></script>
 
