skill section complete

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <link href="https://fonts.googleapis.com/css?family=Poppins:400,900&display=swap" rel="stylesheet">
-   <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
-
+   <script src="https://kit.fontawesome.com/0c44a39b84.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="./style.css">
 
    <title>Portfolio
@@ -38,13 +37,54 @@
       <div id="about-content">
          <h1><span>Hi</span>, <br>
             I'm Min,<br> The <span id="typeEffect"></span></h1>
+         <div id="github-logo">
+            <i class="fab fa-github-square fa-5x"></i>
+            <a href="https://github.com/Min5407" target="_blank"> GitHub</a>
+         </div>
+
+
       </div>
       <div id="about-image">
-         <img src="./pic1.png" alt="bulb">
+         <img src="./Images/pic1.png" alt="bulb">
          <p>“I'm not a great programmer; I'm just a good programmer with great habits.”
             ― Kent Beck</p>
       </div>
    </div>
+
+   <div class="container" id="WhoAmI">
+      <h1 class="heading">Skills </h1>
+      <ul>
+         <li><a class="pressed">Website</a></li>
+         <li><a>Game</a></li>
+         <li><a>Mobile</a></li>
+      </ul>
+
+      <div class="skill" id="webImgs">
+         <img src="./Images/css.png" alt="css">
+         <img src="./Images/html.png" alt="html">
+         <img src="./Images/js.png" alt="js">
+         <img src="./Images/angualr.png" alt="angular">
+         <img src="./Images/node1.png" alt="node">
+         <img src="./Images/mongodb.png" alt="mongodb">
+
+      </div>
+      <div class="skill" id="gameImgs">
+         <img src="./Images/c.png" alt="c#">
+         <img src="./Images/unity.png" alt="unity">
+
+      </div>
+      <div class="skill" id="mobileImgs">
+         <img src="./Images/swift.png" alt="swift">
+         <img src="./Images/xcode.png" alt="xcode">
+
+      </div>
+   </div>
+
+   <div id="timeLine" class="container">
+      <h1 class="heading">Time Line </h1>
+
+   </div>
+
 </body>
 <script src="./main.js"></script>
 
