Timeline partially completed

--- a/index.html
+++ b/index.html
@@ -80,10 +80,63 @@
       </div>
    </div>
 
-   <div id="timeLine" class="container">
-      <h1 class="heading">Time Line </h1>
+   <section id="timeLine">
+      <div class="container">
+         <h1 class="heading">Time Line </h1>
+      </div>
+      <div class="center">
+         <ul>
+            <li>
+               <div>
+                  <h2> <i class="fas fa-chevron-right"></i> Griffith College </h2>
+                  <p> <strong> Diploma of Information Technology</strong>
+                     <br>
+                     <br>
+                     - Enrolled in February, 2017
+                     <br>
+                     <br>
 
-   </div>
+                     - Graudated in February,2018
+                  </p>
+               </div>
+            </li>
+            <li>
+               <div>
+                  <h2> <i class="fas fa-chevron-right"></i> Griffith University </h2>
+                  <p> <strong> Bachelor of Information Technology</strong>
+                     <br>
+                     <br>
+                     - Enrolled in February, 2018
+                     <br>
+                     <br>
+
+                     - Graudated in October,2019
+
+                  </p>
+               </div>
+            </li>
+            <li>
+               <div>
+                  <h2> <i class="fas fa-chevron-right"></i> 2017 ~ 2018: Griffith College </h2>
+                  <p> <strong> Diploma Of Information Technology</strong>
+                     <br>
+                     Basic Css and HTML
+                  </p>
+               </div>
+            </li>
+            <li>
+               <div>
+                  <h2> <i class="fas fa-chevron-right"></i> 2017: Griffith College </h2>
+                  <p> <strong> Diploma Of Information Technology</strong>
+                     <br>
+                     Basic Css and HTML
+                  </p>
+               </div>
+            </li>
+
+         </ul>
+      </div>
+   </section>
 
 </body>
 <script src="./main.js"></script>
