--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <link href="https://fonts.googleapis.com/css?family=Poppins:400,900&display=swap" rel="stylesheet">
    <script src="https://kit.fontawesome.com/0c44a39b84.js" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
+
    <link rel="stylesheet" href="./style.css">
 
    <title>Portfolio
@@ -117,24 +119,32 @@
             </li>
             <li>
                <div>
-                  <h2> <i class="fas fa-chevron-right"></i> 2017 ~ 2018: Griffith College </h2>
-                  <p> <strong> Diploma Of Information Technology</strong>
+                  <h2> <i class="fas fa-chevron-right"></i> NSW Department </h2>
+                  <p> <strong> Programmer</strong>
                      <br>
-                     Basic Css and HTML
-                  </p>
-               </div>
-            </li>
-            <li>
-               <div>
-                  <h2> <i class="fas fa-chevron-right"></i> 2017: Griffith College </h2>
-                  <p> <strong> Diploma Of Information Technology</strong>
                      <br>
-                     Basic Css and HTML
+                     - Built VR video with Unity and C#
+                     <br>
+                     <br>
+                     - February, 2019 ~ October, 2019
+
                   </p>
+
                </div>
             </li>
 
+
          </ul>
+      </div>
+   </section>
+
+   <section id="projects">
+      <div class="container">
+         <h1 class="heading">Projects </h1>
+      </div>
+
+      <div class="center">
+
       </div>
    </section>
 
