--- a/index.html
+++ b/index.html
@@ -140,11 +140,20 @@
 
    <section id="projects">
       <div class="container">
-         <h1 class="heading">Projects </h1>
+         <h1 class="heading">Projects</h1>
       </div>
 
       <div class="center">
-
+         <div class="project">
+         </div>
+         <div class="project">
+         </div>
+         <div class="project">
+         </div>
+         <div class="project">
+         </div>
+         <div class="project">
+         </div>
       </div>
    </section>
 
