--- a/index.html
+++ b/index.html
@@ -1,163 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:400,900&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/0c44a39b84.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
 
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <link href="https://fonts.googleapis.com/css?family=Poppins:400,900&display=swap" rel="stylesheet">
-   <script src="https://kit.fontawesome.com/0c44a39b84.js" crossorigin="anonymous"></script>
-   <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
+    <link rel="stylesheet" href="./style.css" />
 
-   <link rel="stylesheet" href="./style.css">
+    <title>Portfolio</title>
+  </head>
 
-   <title>Portfolio
-   </title>
-</head>
-
-<body>
-   <header>
+  <body>
+    <header>
       <nav>
-         <h1 id="Logo"> <a href="#">Min's Portfolio</a> </h1>
-         <ul id="nav">
-            <li><a href="#"> About Me</a></li>
-            <li><a href="#"> My Projects</a></li>
-         </ul>
+        <h1 id="Logo"><a href="#">Min's Portfolio</a></h1>
+        <ul id="nav">
+          <li><a href="#"> About Me</a></li>
+          <li><a href="#"> My Projects</a></li>
+        </ul>
       </nav>
-   </header>
+    </header>
 
-   <div id="boxshadow">
+    <div id="boxshadow">
       <div id="startPage">
-         <h2>Welcome To My Portfolio</h2>
-         <div id="startBtn">
-            <a href="#">Start</a>
-         </div>
+        <h2>Welcome To My Portfolio</h2>
+        <div id="startBtn">
+          <a href="#">Start</a>
+        </div>
       </div>
-   </div>
+    </div>
 
-   <div id="about">
+    <div id="about">
       <div id="about-content">
-         <h1><span>Hi</span>, <br>
-            I'm Min,<br> The <span id="typeEffect"></span></h1>
-         <div id="github-logo">
-            <i class="fab fa-github-square fa-5x"></i>
-            <a href="https://github.com/Min5407" target="_blank"> GitHub</a>
-         </div>
-
-
+        <h1>
+          <span>Hi</span>, <br />
+          I'm Min,<br />
+          The <span id="typeEffect"></span>
+        </h1>
+        <div id="github-logo">
+          <i class="fab fa-github-square fa-5x"></i>
+          <a href="https://github.com/Min5407" target="_blank"> GitHub</a>
+        </div>
       </div>
       <div id="about-image">
-         <img src="./Images/pic1.png" alt="bulb">
-         <p>“I'm not a great programmer; I'm just a good programmer with great habits.”
-            ― Kent Beck</p>
+        <img src="./Images/pic1.png" alt="bulb" />
+        <p>
+          “I'm not a great programmer; I'm just a good programmer with great
+          habits.” ― Kent Beck
+        </p>
       </div>
-   </div>
+    </div>
 
-   <div class="container" id="WhoAmI">
-      <h1 class="heading">Skills </h1>
+    <div class="container" id="WhoAmI">
+      <h1 class="heading">Skills</h1>
       <ul>
-         <li><a class="pressed">Website</a></li>
-         <li><a>Game</a></li>
-         <li><a>Mobile</a></li>
+        <li><a class="pressed">Website</a></li>
+        <li><a>Game</a></li>
+        <li><a>Mobile</a></li>
       </ul>
 
       <div class="skill" id="webImgs">
-         <img src="./Images/css.png" alt="css">
-         <img src="./Images/html.png" alt="html">
-         <img src="./Images/js.png" alt="js">
-         <img src="./Images/angualr.png" alt="angular">
-         <img src="./Images/node1.png" alt="node">
-         <img src="./Images/mongodb.png" alt="mongodb">
-
+        <img src="./Images/css.png" alt="css" />
+        <img src="./Images/html.png" alt="html" />
+        <img src="./Images/js.png" alt="js" />
+        <img src="./Images/angualr.png" alt="angular" />
+        <img src="./Images/node1.png" alt="node" />
+        <img src="./Images/react.png" alt="react" />
       </div>
       <div class="skill" id="gameImgs">
-         <img src="./Images/c.png" alt="c#">
-         <img src="./Images/unity.png" alt="unity">
-
+        <img src="./Images/c.png" alt="c#" />
+        <img src="./Images/unity.png" alt="unity" />
       </div>
       <div class="skill" id="mobileImgs">
-         <img src="./Images/swift.png" alt="swift">
-         <img src="./Images/xcode.png" alt="xcode">
-
+        <img src="./Images/swift.png" alt="swift" />
+        <img src="./Images/xcode.png" alt="xcode" />
       </div>
-   </div>
+    </div>
 
-   <section id="timeLine">
+    <section id="timeLine">
       <div class="container">
-         <h1 class="heading">Time Line </h1>
+        <h1 class="heading">Time Line</h1>
       </div>
       <div class="center">
-         <ul>
-            <li>
-               <div>
-                  <h2> <i class="fas fa-chevron-right"></i> Griffith College </h2>
-                  <p> <strong> Diploma of Information Technology</strong>
-                     <br>
-                     <br>
-                     - Enrolled in February, 2017
-                     <br>
-                     <br>
+        <ul>
+          <li>
+            <div>
+              <h2><i class="fas fa-chevron-right"></i> Griffith College</h2>
+              <p>
+                <strong> Diploma of Information Technology</strong>
+                <br />
+                <br />
+                - Enrolled in February, 2017
+                <br />
+                <br />
 
-                     - Graudated in February,2018
-                  </p>
-               </div>
-            </li>
-            <li>
-               <div>
-                  <h2> <i class="fas fa-chevron-right"></i> Griffith University </h2>
-                  <p> <strong> Bachelor of Information Technology</strong>
-                     <br>
-                     <br>
-                     - Enrolled in February, 2018
-                     <br>
-                     <br>
+                - Graudated in February,2018
+              </p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h2><i class="fas fa-chevron-right"></i> Griffith University</h2>
+              <p>
+                <strong> Bachelor of Information Technology</strong>
+                <br />
+                <br />
+                - Enrolled in February, 2018
+                <br />
+                <br />
 
-                     - Graudated in October,2019
-
-                  </p>
-               </div>
-            </li>
-            <li>
-               <div>
-                  <h2> <i class="fas fa-chevron-right"></i> NSW Department </h2>
-                  <p> <strong> Programmer</strong>
-                     <br>
-                     <br>
-                     - Built VR video with Unity and C#
-                     <br>
-                     <br>
-                     - February, 2019 ~ October, 2019
-
-                  </p>
-
-               </div>
-            </li>
-
-
-         </ul>
+                - Graudated in October,2019
+              </p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h2><i class="fas fa-chevron-right"></i> NSW Department</h2>
+              <p>
+                <strong> Programmer</strong>
+                <br />
+                <br />
+                - Built VR video with Unity and C#
+                <br />
+                <br />
+                - February, 2019 ~ October, 2019
+              </p>
+            </div>
+          </li>
+        </ul>
       </div>
-   </section>
+    </section>
 
-   <section id="projects">
+    <section id="projects">
       <div class="container">
-         <h1 class="heading">Projects</h1>
+        <h1 class="heading">Projects</h1>
       </div>
 
       <div class="center">
-         <div class="project">
-         </div>
-         <div class="project">
-         </div>
-         <div class="project">
-         </div>
-         <div class="project">
-         </div>
-         <div class="project">
-         </div>
+        <div class="project">
+          <img class="projects" src="./Images//projects/newsGrid.png" />
+        </div>
+        <div class="project">
+          <img class="projects" src="./Images//projects/portfolio.png" />
+        </div>
+        <div class="project">
+          <img
+            class="projects"
+            src="./Images//projects/React-OnlineShopping.png"
+          />
+        </div>
+        <div class="project">
+          <img class="projects" src="./Images//projects/netflix.png" />
+        </div>
+        <div class="project">
+          <img class="projects" src="./Images//projects/wapApp.png" />
+        </div>
+        <div class="project">
+          <img class="projects" src="./Images//projects/diceGame.png" />
+        </div>
       </div>
-   </section>
-
-</body>
-<script src="./main.js"></script>
-
+    </section>
+  </body>
+  <script src="./main.js"></script>
 </html>
