created project data.js, complete the basic project modal strucutre / need to do the modal div section

--- a/index.html
+++ b/index.html
@@ -153,10 +153,7 @@
           <img class="projects" src="./Images//projects/portfolio.png" />
         </div>
         <div class="project">
-          <img
-            class="projects"
-            src="./Images//projects/React-OnlineShopping.png"
-          />
+          <img class="projects" src="./Images//projects/onlineshopping.png" />
         </div>
         <div class="project">
           <img class="projects" src="./Images//projects/netflix.png" />
@@ -167,8 +164,14 @@
         <div class="project">
           <img class="projects" src="./Images//projects/diceGame.png" />
         </div>
+        <div class="project">
+          <img class="projects" src="./Images//projects/FinancialCompany.png" />
+        </div>
       </div>
     </section>
   </body>
+  <!-- <script src="./data.js"></script> -->
+  <script type="text/javascript" src="./data.js"></script>
+
   <script src="./main.js"></script>
 </html>
