particle js effect deleted

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ul>
       </nav>
     </header>
-
+    <!-- 
     <div id="boxshadow">
       <div id="startPage">
         <h2>Welcome To My Portfolio</h2>
@@ -37,7 +37,7 @@
           <a href="#">Start</a>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div id="about">
       <div id="about-content">
