--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   <body>
     <header>
       <nav>
-        <h1 id="Logo"><a href="#">Min's Portfolio</a></h1>
+        <h1 id="Logo"><a href="/">Min's Portfolio</a></h1>
         <ul id="nav">
-          <li><a href="#"> About Me</a></li>
-          <li><a href="#"> My Projects</a></li>
+          <!-- <li><a href="#"> About Me</a></li> -->
+          <li><a href="#projects"> My Projects</a></li>
         </ul>
       </nav>
     </header>
@@ -94,7 +94,7 @@
         <ul>
           <li>
             <div>
-              <h2><i class="fas fa-chevron-right"></i> Griffith College</h2>
+              <h2>Griffith College</h2>
               <p>
                 <strong> Diploma of Information Technology</strong>
                 <br />
@@ -109,7 +109,7 @@
           </li>
           <li>
             <div>
-              <h2><i class="fas fa-chevron-right"></i> Griffith University</h2>
+              <h2> Griffith University</h2>
               <p>
                 <strong> Bachelor of Information Technology</strong>
                 <br />
@@ -124,7 +124,7 @@
           </li>
           <li>
             <div>
-              <h2><i class="fas fa-chevron-right"></i> NSW Department</h2>
+              <h2></i> NSW Department</h2>
               <p>
                 <strong> Programmer</strong>
                 <br />
