--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
         <div class="project">
           <img class="projects" src="./Images//projects/FinancialCompany.png" />
         </div>
+        <div class="project">
+          <img class="projects" src="./Images//projects/corona.png" />
+        </div>
       </div>
     </section>
   </body>
