project image src link modified

--- a/index.html
+++ b/index.html
@@ -147,28 +147,28 @@
 
       <div class="center">
         <div class="project">
-          <img class="projects" src="./Images//projects/newsGrid.png" />
+          <img class="projects" src="https://firebasestorage.googleapis.com/v0/b/portfolio-5163b.appspot.com/o/newsGrid.png?alt=media&token=064b6bf1-872d-4a82-be43-18c6e547602f" />
         </div>
         <div class="project">
-          <img class="projects" src="./Images//projects/portfolio.png" />
+          <img class="projects" src="https://firebasestorage.googleapis.com/v0/b/portfolio-5163b.appspot.com/o/portfolio.png?alt=media&token=3432060c-c65e-4d4a-8457-04252f6c7654" />
         </div>
         <div class="project">
-          <img class="projects" src="./Images//projects/onlineshopping.png" />
+          <img class="projects" src="https://firebasestorage.googleapis.com/v0/b/portfolio-5163b.appspot.com/o/onlineshopping.png?alt=media&token=297d2b5b-a543-4ba1-b56c-37b05d867135" />
         </div>
         <div class="project">
-          <img class="projects" src="./Images//projects/netflix.png" />
+          <img class="projects" src="https://firebasestorage.googleapis.com/v0/b/portfolio-5163b.appspot.com/o/netflix.png?alt=media&token=0699413a-b505-447e-afae-40831b8569ff" />
         </div>
         <div class="project">
-          <img class="projects" src="./Images//projects/wapApp.png" />
+          <img class="projects" src="https://firebasestorage.googleapis.com/v0/b/portfolio-5163b.appspot.com/o/wapApp.png?alt=media&token=b984355b-e9c2-4e43-ac87-9bc16a040507" />
         </div>
         <div class="project">
-          <img class="projects" src="./Images//projects/diceGame.png" />
+          <img class="projects" src="https://firebasestorage.googleapis.com/v0/b/portfolio-5163b.appspot.com/o/diceGame.png?alt=media&token=84cb4a22-189b-4e3e-88c9-66c16faeaaeb" />
         </div>
         <div class="project">
-          <img class="projects" src="./Images//projects/FinancialCompany.png" />
+          <img class="projects" src="https://firebasestorage.googleapis.com/v0/b/portfolio-5163b.appspot.com/o/FinancialCompany.png?alt=media&token=0f6d8a43-f86d-437a-966f-d7ae62d4adef" />
         </div>
         <div class="project">
-          <img class="projects" src="./Images//projects/corona.png" />
+          <img class="projects" src="https://firebasestorage.googleapis.com/v0/b/portfolio-5163b.appspot.com/o/corona.png?alt=media&token=dade9e21-16d9-420f-ad6f-504eca563b53" />
         </div>
       </div>
     </section>
